# Dynamic-RSS-Feed-RAG

./: .gitignore  docker-compose.yaml  pyproject.toml  readme.md
data/: RSS_Info.json
data/resultados_ejemplo/20260310_2328/: fútbol.json  noticias_generales.json
data/resultados_ejemplo/20260310_2332/: ciencia.json  economía.json  noticias_generales.json  tecnología.json
data/resultados_ejemplo/20260311_2307/: avisos_del_gobierno.json
qdrant_config/: config.yaml
qdrant_data_pontia/: raft_state.json
qdrant_data_pontia/collections/rss_news_index/0/: newest_clocks.json  replica_state.json
qdrant_data_pontia/collections/rss_news_index/0/segments/5a14ecfd-cba7-43f3-b954-9c269309bb1e/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data_pontia/collections/rss_news_index/0/segments/9314114f-c802-4894-866e-98af59ac298e/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data_pontia/collections/rss_news_index/0/segments/b32217eb-2deb-49c8-a33b-4258f97d42a9/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data_pontia/collections/rss_news_index/0/segments/c62501a0-1143-495f-8db3-720d29df8503/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data_pontia/collections/rss_news_index/0/wal/: first-index
scripts/: create_llamaindex_index.py  preprocessing.py
src/: app.py
src/api/: router_llamaindex.py
src/processes/: __init__.py
src/processes/llamaindex_query_engine/: query_engine.py
src/services/: embeddings.py  llms.py  vector_store.py
(+3 files in other folders)
